--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/reset.css" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Slackey|Roboto|Merriweather&display=swap"
+      href="https://fonts.googleapis.com/css?family=Slackey|Roboto|Concert+One|Merriweather&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -15,7 +15,6 @@
   <body>
     <main>
       <div class="game">
-        <div class="spacer"></div>
         <div id="scoreboard">
           <div id="wins">
             <h3>Wins</h3>
@@ -30,7 +29,6 @@
             <h1 id="lossCount">0</h1>
           </div>
         </div>
-        <div class="spacer"></div>
         <h2 id="anounce">Press Space to start</h2>
 
         <section id="activeBoard">
